Configure Docker Files to run project in the Docker Container